style: index.html e stle.css completamento esercizio

--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toboolist</title>
+
+    <link rel="stylesheet" href="./css/style.css">
+
+
 </head>
-<body>
-    
+
+<body class="background-gray">
+    <header class="navbar background-white">
+        <img class="navbar-img" src="./img/logo-trasparente.png" alt="logo boolean">
+        <h1 class="navbar-title">Toboolist</h1>
+    </header>
+    <main class="style">
+        <div class="background-white">
+
+            <div class="button-section bottom-divider">
+                <button class="buttons background-blue text-color-white">
+                    Add task
+                </button>
+                <button class="buttons background-white text-color-gray">
+                    Add selection
+                </button>
+            </div>
+            <div class="background-white">
+                <h3 class="list">New task</h3>
+                <ul class="linee-lista">
+                    <li>
+                        &check; Quarterly Newsletter <span class="text-color-white background-blue circle-text">editorial</span>
+                    </li>
+                </ul>
+                <h3 class="list">Today</h3>
+                <ul class="linee-lista">
+                    <li>&check; Recruiting blog post <span class="text-color-white background-blue circle-text">editorial</span></li>
+                    <li>&check; Mobile app launch <span class="text-color-white background-purple circle-text">Q1 goals</span></li>
+                    <li>&cross; Interview Jhon H. <span class="text-color-white background-green circle-text">Recruiting</span></li>
+                    <li>&check; Summit update to mobile storefronts <span class="text-color-white background-orange circle-text">Mobile</span></li>
+                </ul>
+                <h3 class="list">Upcoming</h3>
+                <ul class="linee-lista">
+                    <li>&cross; Schedule meeting with alex</li>
+                    <li>&check; Homepage refresh <span class="text-color-white background-violet circle-text">Website</span></li>
+                    <li>&check; Onboard new sales team members <span class="text-color-white background-lightgreen circle-text">sales</span></li>
+                    <li>&check; Review editorial calendar <span class="text-color-white background-blue circle-text">editorial</span></li>
+                </ul>
+
+
+            </div>
+        </div>
+    </main>
+
 </body>
+
 </html>
